--- a/my_portfoliowebsite/my_website/templates/signup.html
+++ b/my_portfoliowebsite/my_website/templates/signup.html
@@ -185,7 +185,7 @@
         text: "{{ message }}",
         duration: 4000,
         gravity: "top",
-        position: "right",
+        position: "center",
         backgroundColor: "linear-gradient(to right,rgb(249, 65, 255),rgb(174, 23, 219))",
         stopOnFocus: true
       }).showToast();
