--- a/my_portfoliowebsite/my_website/templates/home.html
+++ b/my_portfoliowebsite/my_website/templates/home.html
@@ -19,7 +19,7 @@
             </p>
             <div class="home-buttons">
                 <a href="#contact" class="btn btn-primary">Get In Touch</a>
-                <a id="getResumeBtn" href="Sandip_Resume.pdf.pdf" download="Sandip_Resume.pdf.pdf" class="btn btn-secondary" target="_blank" rel="noopener">Get Resume</a>
+                <a id="getResumeBtn" href="\static\Sandip_Resume.pdf.pdff" download="\static\Sandip_Resume.pdf.pdff" class="btn btn-secondary" target="_blank" rel="noopener">Get Resume</a>
             </div>
         </div>
    <div class="home-video" style="display: flex; justify-content: center; align-items: center; padding: 10px;">
