--- a/my_portfoliowebsite/my_website/templates/home.html
+++ b/my_portfoliowebsite/my_website/templates/home.html
@@ -207,6 +207,7 @@
                 <div class="social-links">
                     <a href="https://github.com/Sandip-364710/skpatel" class="social-link"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/sandip-jakhaniya-2a6762267/" class="social-link"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://wa.me/9313245505" class="social-link"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
             <div class="contact-form">
